--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -22,7 +22,7 @@
 			position: relative;
 			border-bottom: 0;
 			height: 100%;
-			margin-left: 6em;
+			margin-left: 5em;
 			img {
 				position: relative;
 				height: 100%;
